<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddIngredient" >

    <EditText
        android:id="@+id/add_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:ems="10"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/add_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/add_name"
        android:layout_below="@+id/add_name"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/add_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_quantity"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/textView4"
        android:hint="@string/optional"
        android:ems="10"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/add_quantity"
        android:layout_alignParentLeft="true"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/add_quantity"
        android:layout_alignBottom="@+id/add_quantity"
        android:layout_alignParentLeft="true"
        android:text="@string/quantity"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/add_description"
        android:layout_alignBottom="@+id/add_description"
        android:layout_alignParentLeft="true"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/add_description"
        android:layout_marginBottom="20dp"
        android:text="@string/add_ingredient" 
        android:onClick="finishActivity"/>

</RelativeLayout>